# hyuqueue

./: .gitignore  Cargo.toml  ERROR_HANDLING.org  README.org  config.example.toml  flake.nix  justfile  llms.org  rust-template.json  rustfmt.toml
.github/: branch-protection.json
.github/workflows/: dependabot-automerge.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/src/: activity.rs  event.rs  item.rs  lib.rs  policy.rs  queue.rs  topic.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  llm.rs  logging.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  lib.rs  logging.rs  main.rs  web_base.rs
crates/server/src/api/: items.rs  mod.rs  push.rs  queues.rs
crates/server/src/topics/: heartbeat.rs  mod.rs
crates/server/src/workers/: ingest.rs  intake.rs  mod.rs  outbound.rs  review.rs
crates/server/tests/: integration_test.rs
crates/store/: Cargo.toml
crates/store/migrations/: 001_initial.sql
crates/store/src/: db.rs  events.rs  items.rs  lib.rs  queues.rs  signals.rs  topic_data.rs
crates/store/tests/: integration_test.rs
crates/tui/: Cargo.toml
crates/tui/src/: config.rs  logging.rs  main.rs
docs/: building-a-topic.org
emacs/: hyuqueue-tests.el  hyuqueue.el
frontend/public/: index.html
frontend/src/: Main.elm
nix/modules/: darwin-server.nix  nixos-server.nix
