[package]
name = "hyuqueue-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
hyuqueue-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
